# CyDifflib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: branchbuild.yml  build.yml  pythonbuild.yml  releasebuild.yml
bench/: benchmark.py  benchmark_results.csv
src/: cydifflib.cpp  cydifflib.pyx
src/cydifflib/: CMakeLists.txt  __init__.py  _initialize.pyx  generate.sh
src/cython/: CMakeLists.txt  _initialize.pyx
tests/: test_cydifflib.py  test_cydifflib_expect.html
tools/: sdist.patch
