[metadata]
name = cydifflib
version = 0.1.0
url = https://github.com/maxbachmann/cydifflib
author = Max Bachmann
author_email = contact@maxbachmann.de
description = Fast difflib reimplementation in Cython
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=2.7

[options.packages.find]
where=src